DuPont DevSB/src/objects/ccrz__E_Rule__c.object
<CustomObject>
    <description>Rule</description>
    <fields>
        <fullName>ccrz__CurrencyISOCode__c</fullName>
        <label>Currency ISO Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__CustomerTypeCode__c</fullName>
        <label>Customer Type Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__EndDate__c</fullName>
        <defaultValue>DATEVALUE(&quot;2099-12-31&quot;)</defaultValue>
        <description>End Date</description>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccrz__Name__c</fullName>
        <description>Name</description>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Relation__c</fullName>
        <label>Target Relation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SPEC</fullName>
                </value>
                <value>
                    <fullName>Pricelist Item</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__RuleId__c</fullName>
        <externalId>true</externalId>
        <label>Rule Id</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__RuleMinAmt__c</fullName>
        <description>Minimum Dollar Value for valid rule</description>
        <label>Rule Min Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__RuleMinQty__c</fullName>
        <description>Minimum quantity of items for value rule</description>
        <label>Rule Min Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__RuleSource__c</fullName>
        <label>Rule Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pricing</fullName>
                    <default>true</default>
                    <label>Pricing</label>
                </value>
                <value>
                    <fullName>Coupon</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__RuleType__c</fullName>
        <description>Rule Type</description>
        <label>Rule Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SteppedHistory</fullName>
                </value>
                <value>
                    <fullName>Combination</fullName>
                </value>
                <value>
                    <fullName>CartTotal</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Shipping</fullName>
                </value>
                <value>
                    <fullName>TieredHistory</fullName>
                </value>
                <value>
                    <fullName>Stepped</fullName>
                </value>
                <value>
                    <fullName>Tiered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__SourceRelation__c</fullName>
        <label>Source Relation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SPEC</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__StartDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>Start Date</description>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>CC Rule</label>
    <listViews>
        <fullName>ccrz__All</fullName>
        <columns>ccrz__Name__c</columns>
        <columns>ccrz__Relation__c</columns>
        <columns>ccrz__RuleId__c</columns>
        <columns>ccrz__RuleMinAmt__c</columns>
        <columns>ccrz__RuleMinQty__c</columns>
        <columns>ccrz__RuleSource__c</columns>
        <columns>ccrz__RuleType__c</columns>
        <columns>ccrz__SourceRelation__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ccrz__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>RuleID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Rules</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>